make ocamlmiddleend an archive, not a lib

--- a/middle_end/BUILD.bazel
+++ b/middle_end/BUILD.bazel
@@ -31,8 +31,8 @@ boot_library(
 
 ## defined in compilerlibs/Makefile.compilerlibs
 ## used by //compilerlibs:ocamlmiddleend and //compilerlibs:ocamloptcomp
-boot_library(
-#boot_archive(
+# boot_library(
+boot_archive(
     name = "ocamlmiddleend",
     manifest  = [
         ## NB: the makefiles take pains to put stuff in order, across
