add rules run_repl, run_tool; //toplevel:ocaml stuff
* convenience target //:repl runs //toplevel:ocaml.tmp (until we get
expunge sorted out)

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,11 +1,15 @@
 load("@bazel_skylib//rules:build_test.bzl", "build_test")
 load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
 
-load("//bzl:rules.bzl", "run_tool")
+load("//bzl:rules.bzl", "run_tool", "run_repl")
 
 exports_files(["Makefile.config", "VERSION", "BUILD.bazel"])
 
 label_flag(name = "arg", build_setting_default = "Label()")
+
+run_repl(
+    name = "repl",
+)
 
 run_tool(
     name = "dumpobj",
