--- a/config/camlheaders/BUILD.bazel
+++ b/config/camlheaders/BUILD.bazel
@@ -11,6 +11,7 @@ camlheaders(
         "//ocamltest:__pkg__",
         "//testsuite:__subpackages__",
         "//toolchain/adapter:__pkg__",
-        "//tools:__pkg__"
+        "//tools:__pkg__",
+        "//toplevel:__pkg__"
     ]
 )
