--- a/testsuite/tests/lib-arg/BUILD.bazel
+++ b/testsuite/tests/lib-arg/BUILD.bazel
@@ -22,12 +22,12 @@ test_suite(
 )
 
 inline_expect_test(
-    name   = "Test_rest_all",
+    name   = "Test_rest_all_test",
     src = "test_rest_all.ml",
 )
 
 expect_test(
-    name     = "testarg_expect_test",
+    name     = "Testarg_test",
     stdout   = "testarg.stdout",
     expected = "testarg.reference",
     main     = ":Testarg",
@@ -45,7 +45,7 @@ test_module(
 )
 
 expect_test(
-    name     = "testerror_expect_test",
+    name     = "Testerror_test",
     stdout   = "testerror.stdout",
     expected = "testerror.reference",
     main     = ":Testerror",
