--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,11 +1,23 @@
 load("@bazel_skylib//rules:build_test.bzl", "build_test")
-load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
+load("@bazel_skylib//rules:common_settings.bzl",
+     "bool_flag", "string_flag")
 
 load("//bzl:rules.bzl", "run_tool", "run_repl")
 
 exports_files(["Makefile.config", "VERSION", "BUILD.bazel"])
 
-label_flag(name = "arg", build_setting_default = "Label()")
+label_flag(name = "arg", build_setting_default = "BUILD.bazel")
+
+bool_flag(
+    name = "verbose",
+    build_setting_default = False,
+    visibility = ["//visibility:public"]
+)
+
+config_setting(
+    name = "verbose?",
+    values = {"verbose": "True"}
+)
 
 run_repl(
     name = "repl",
