--- a/bin/BUILD.bazel
+++ b/bin/BUILD.bazel
@@ -2,6 +2,8 @@ package(default_visibility = ["//visibility:public"])
 
 load("//bzl:rules.bzl", "ocaml_compiler")
 
+## FIXME: suppport ocamlcp.[byte|opt], ocamloptp.[byte|opt]
+## FIXME: support flambda
 ocaml_compiler(
     name = "ocamlcc",
     opts = [ ] + select({
